# gloss-web

./: .gitignore  README.txt  gloss-web.cabal  start.sh
gloss-web-adapters/: GlossAdapters.hs  gloss-web-adapters.cabal
src/: App.hs  CacheMap.hs  ClientManager.hs  EventStream.hs  Instances.hs  Main.hs  ProfileSubst.hs  Serialize.hs  Source.hs
web/: EventSource.js  anim.html  animate.tpl  codemirror-compressed.js  display.tpl  draw.js  editor.tpl  index.html  sim.html  tooltip.css  tooltip.js
web/theme/: glossweb.css
