Name:                gloss-web
Version:             0.1
Synopsis:            Web-based editor for gloss
Description:         Web-based environment to write and display gloss
                     pictures.  This is a reimplementation of gloss to use
                     the JavaScript Canvas API.
License:             BSD3
License-file:        LICENSE
Author:              Chris Smith <cdsmith@gmail.com>
Maintainer:          Chris Smith <cdsmith@gmail.com>
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable gloss-web
  Hs-source-dirs:    src
  Main-is:           Main.hs
  Ghc-options:       -O2 -rtsopts -auto-all
  Ghc-prof-options:  -DPROFILE_SUBST
  Build-depends:     aeson,
                     array,
                     base,
                     base64-bytestring,
                     blaze-builder,
                     bytestring,
                     containers,
                     cryptohash,
                     directory,
                     enumerator,
                     filepath,
                     ghc >= 7.2,
                     ghc-paths,
                     gloss,
                     gloss-web-adapters,
                     heist,
                     mtl,
                     process,
                     random,
                     snap-core,
                     snap-server,
                     text,
                     time,
                     vector,
                     xmlhtml,
                     zlib

  if !os(windows)
    Build-depends:   unix
